# cloud-custodian

c7n/resources/: __init__.py
tools/c7n_virtana/: pyproject.toml  readme.md
tools/c7n_virtana/c7n_virtana/: api.py  client.py  entry.py  provider.py
tools/c7n_virtana/c7n_virtana/resources/: resource_map.py  resourcegroup.py
